// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Claude prompt builder > should match snapshot 1`] = `
"## HTML Output Contract

When generating HTML documents, you MUST follow these rules without exception:

1. **Always include this exact link tag** in the <head>:
   \`<link rel="stylesheet" href="./styles.css">\`

2. **Never write inline styles**. Do not use \`style=""\` attributes or \`<style>\` blocks.

3. **Use only the pre-defined CSS classes** listed below. These classes map to a shared
   stylesheet. Using them correctly is essential — every class you invent wastes tokens and
   breaks visual consistency.

4. **Structure**: wrap all content in semantic HTML5 tags. Use \`<main>\`, \`<section>\`,
   \`<article>\`, \`<aside>\`, \`<header>\`, \`<footer>\` as appropriate.

### Available CSS Classes

Available CSS classes (use these, never write inline styles):
Layout: container, stack, stack-sm, stack-lg, cluster, sidebar, grid-2, grid-3, grid-4
Typography: prose, heading-xl, heading-lg, heading-md, heading-sm, text-muted, text-mono, code-inline, code-block, blockquote, label
Components: card, card-header, card-body, card-footer, data-table, data-table-striped
Badges: badge, badge-primary, badge-success, badge-warning, badge-error, badge-neutral
Callouts: callout, callout-info, callout-warning, callout-error, callout-success, callout-tip
Dividers: divider, divider-dashed
Utilities: mt-auto, text-right, text-center, truncate, visually-hidden

### Example Output Structure

\`\`\`html
<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <title>Document Title</title>
  <link rel="stylesheet" href="./styles.css">
</head>
<body>
  <main class="container stack">
    <h1 class="heading-xl">Report Title</h1>
    <div class="card">
      <div class="card-header"><h2 class="heading-md">Section</h2></div>
      <div class="card-body prose">
        <p>Content here.</p>
        <table class="data-table data-table-striped">...</table>
      </div>
    </div>
    <div class="callout callout-warning">
      <p>Important note.</p>
    </div>
  </main>
</body>
</html>
\`\`\`

Violation of any rule above (inline styles, missing link tag, invented classes) will cause
validation failure and your output will be rejected."
`;

exports[`Gemini prompt builder > should match snapshot 1`] = `
"## HTML Output Contract

When generating HTML documents, follow these strict rules:

1. **Always include this exact link tag** in the <head>:
   \`<link rel="stylesheet" href="./styles.css">\`

2. **Never write inline styles**. Do not use \`style=""\` attributes or \`<style>\` blocks.

3. **Use only the pre-defined CSS classes** listed below. These classes map to a shared stylesheet.

4. **Structure**: wrap all content in semantic HTML5 tags.

### Available CSS Classes

Available CSS classes (use these, never write inline styles):
Layout: container, stack, stack-sm, stack-lg, cluster, sidebar, grid-2, grid-3, grid-4
Typography: prose, heading-xl, heading-lg, heading-md, heading-sm, text-muted, text-mono, code-inline, code-block, blockquote, label
Components: card, card-header, card-body, card-footer, data-table, data-table-striped
Badges: badge, badge-primary, badge-success, badge-warning, badge-error, badge-neutral
Callouts: callout, callout-info, callout-warning, callout-error, callout-success, callout-tip
Dividers: divider, divider-dashed
Utilities: mt-auto, text-right, text-center, truncate, visually-hidden

### Example Output Structure

\`\`\`html
<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <title>Document Title</title>
  <link rel="stylesheet" href="./styles.css">
</head>
<body>
  <main class="container stack">
    <h1 class="heading-xl">Report Title</h1>
    <div class="card">
      <div class="card-header"><h2 class="heading-md">Section</h2></div>
      <div class="card-body prose">
        <p>Content here.</p>
      </div>
    </div>
  </main>
</body>
</html>
\`\`\`

Violation of any rule above (inline styles, missing link tag, invented classes) will cause validation failure."
`;
